Fixed a bit on mobileview Fixed websocket for 2.0 Started on a crawler

--- a/com.getshop.client/apps/Amandus/skin/mobile.css
+++ b/com.getshop.client/apps/Amandus/skin/mobile.css
@@ -1,17 +1,18 @@
 .ProductLists .grid_view .product_title { 
     background: #00b7ea; /* Old browsers */
-background: -moz-linear-gradient(top, #00b7ea 0%, #009ec3 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00b7ea), color-stop(100%,#009ec3)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* IE10+ */
-background: linear-gradient(to bottom, #00b7ea 0%,#009ec3 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', endColorstr='#009ec3',GradientType=0 ); /* IE6-9 */
-font-size: 13px; color:#FFF; 
-height: 25px !important;
-padding: 0px !important;
-line-height:25px;
-overflow:hidden;
+    background: -moz-linear-gradient(top, #00b7ea 0%, #009ec3 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00b7ea), color-stop(100%,#009ec3)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, #00b7ea 0%,#009ec3 100%); /* IE10+ */
+    background: linear-gradient(to bottom, #00b7ea 0%,#009ec3 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00b7ea', endColorstr='#009ec3',GradientType=0 ); /* IE6-9 */
+    font-size: 13px; color:#FFF; 
+    height: 45px !important;
+    padding: 0px !important;
+    line-height:45px;
+    overflow:hidden;
+    font-size: 16px;
 }
 
 
@@ -19,3 +20,31 @@ overflow:hidden;
 .gstabheader { border-bottom: solid 1px #00b7ea; }
 .gstabheader .gstabbtn { font-size: 12px; border-color: #00b7ea; border-bottom: solid 0px; border-top-left-radius: 3px; border-top-right-radius: 3px;  }
 .gstabheader .gstabbtn.gsactivetab { background-color:#00b7ea; }
+
+.gsdepth_0.gsrow {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.products.grid_view .short_description {
+    display: none;
+}
+
+.ProductLists .grid_view .productbox {
+    padding-top: 60px !important;
+    margin-top: 25px !important;
+    margin-bottom: 25px !important;
+}
+
+.gsbody_inner[gspagetype="product"] .gsdepth_0.gsrow {
+    padding-top: 30px;
+}
+
+.gsbody_inner[gspagetype="product"] .product_price {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.gsbody_inner[gspagetype="product"] .gscontainercell.gscontainer {
+    display: none;
+}
